--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: 'official', version: '1.19.3'
+    mappings channel: 'official', version: '1.19.4'
 
     runs {
         client {
@@ -86,7 +86,7 @@ dependencies {
 //    implementation fg.deobf("curse.maven:jei-238222:3969039")
 //
 //    implementation fg.deobf("curse.maven:the-one-probe-245211:3927520")
-//    implementation fg.deobf("curse.maven:jumpy-boats-542110:3877554")
+    implementation fg.deobf("curse.maven:jumpy-boats-542110:4442101")
 }
 
 mixin {
