--- a/build.gradle
+++ b/build.gradle
@@ -107,7 +107,7 @@ jar {
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 "TweakClass": "org.spongepowered.asm.launch.MixinTweaker",
                 "TweakOrder": 0,
-                "MixinConfigs" : "fireproofboats.mixins.json"
+                "MixinConfigs" : "fireproofboats.mixin.json"
         ])
     }
 }
